--- a/package.json
+++ b/package.json
@@ -1,18 +1,37 @@
 {
-  "name": "testai",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~48.0.4",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/image-editor": "^2.3.0",
+    "@tensorflow-models/blazeface": "0.0.5",
+    "@tensorflow-models/mobilenet": "^2.0.4",
+    "@tensorflow/tfjs": "^2.6.0",
+    "@tensorflow/tfjs-react-native": "^0.4.0",
+    "@unimodules/core": "^7.1.2",
+    "@unimodules/react-native-adapter": "^6.3.0",
+    "expo": "^48.0.0",
+    "expo-camera": "~13.2.1",
+    "expo-gl": "~12.4.0",
+    "expo-gl-cpp": "~9.1.2",
+    "expo-image-manipulator": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "jpeg-js": "^0.4.2",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-fs": "^2.16.6",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
