--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native": "0.71.3",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-fs": "^2.16.6",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.11"
   },
