--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/image-editor": "^2.3.0",
     "@tensorflow-models/blazeface": "0.0.5",
     "@tensorflow-models/mobilenet": "^2.0.4",
