--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "@tensorflow-models/mobilenet": "^2.0.4",
     "@tensorflow/tfjs": "^2.6.0",
     "@tensorflow/tfjs-react-native": "^0.4.0",
-    "@unimodules/core": "^7.1.2",
-    "@unimodules/react-native-adapter": "^6.3.0",
     "expo": "^48.0.0",
     "expo-camera": "~13.2.1",
     "expo-gl": "~12.4.0",
-    "expo-gl-cpp": "~9.1.2",
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
+    "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "jpeg-js": "^0.4.2",
     "lottie-react-native": "5.1.4",
@@ -31,8 +29,7 @@
     "react-native-fs": "^2.16.6",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.11",
-    "expo-splash-screen": "~0.18.1"
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
